# devenv

./: .gitignore  MANIFEST.in  QUICK_START.md  README.md  SETUP_SUMMARY.md  pyproject.toml  requirements.txt
cursor-rules/commands/: normalize-vault-structure.md  rename-and-frontmatter-meeting-notes.md
cursor-rules/rules/writing/: README.md  cta-guide.mdc  fundamentals.mdc  hook-guard.mdc  social-writing-core.mdc  style-checker.mdc
devenv/: __init__.py  cli.py  setup.py  tools.yaml
devenv/cursor-rules/commands/: detailed-customer-context.md  meeting-notes-store.md  update-latest-anyscale-docs.md
devenv/cursor-rules/rules/writing/: linkedin-hashtags-links.mdc
